<resources>
    <string name="app_name">Sita</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_txt">Add your details and send OTP to sign up</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="app_name_wallet">Please click on this wallet to use wallet</string>
    <string name="balancee">Wallet Balance: </string>
    <string name="cashback_wallet_balance"> Cashback Wallet Balance </string>
    <string name="cart">Cart</string>
    <string name="search">Search Sita Products</string>
    <string name="search_orders">Search Sita Orders Products</string>
    <string name="address">Address <font color='#FF4A4A'>*</font></string>
    <string name="comments">Comment here</string>
    <string name="address2">Address</string>
    <string name="cart_empty">Your cart is empty. Please add a few items</string>
    <string name="subscription_plans">Subscription Plans</string>
    <string name="out_products">Our Products</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="my_cart">MY CART</string>
    <string name="my_order_cap">MY ORDERS</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="all_product">All Products</string>
    <string name="change">Change Address</string>
    <string name="check_out">Checkout</string>
    <string name="NOCONN">Please check your internet connection.</string>
    <string name="price_details">Price Details</string>
    <string name="address_details">Address Details</string>
    <string name="total_price">Total price</string>
    <string name="total_amount">Total amount</string>
    <string name="amount">Amount</string>
    <string name="deliverdAddress">Delivered Address</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="packing_charge"> Packing Charge</string>
    <string name="product_details">Product details</string>
    <string name="discription">Discription</string>
    <string name="defaul">Default</string>
    <string name="subscribe_now"> Subscribe Now</string>
    <string name="order_details">Order Details</string>
    <string name="six_months">6 Months Plan</string>
    <string name="select_language">Select Your Language</string>
    <string name="select_language_hindi">Choose your language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="pangabi">Panjabi</string>
    <string name="urdu">Urdu</string>
    <string name="bangali">Bangali</string>
    <string name="yeh">Yeh!</string>
    <string name="order_placed">Your Order has been successfully placed</string>
    <string name="request_cancel">Request Cancellation</string>
    <string name="comment_option">Comment (Option)</string>
    <string name="submit_request">Submit Request</string>
    <string name="reason_for_cancellation">Reason for cancellation</string>
    <string name="wrong_address">Wrong address for the Order</string>
    <string name="wrong_phone_number">Wrong Phone Number</string>
    <string name="expected_delivery">Expected delivery is very long</string>
    <string name="change_mind">I have change my mind</string>
    <string name="change_reminder">If you cancel now, you may not be able to avail this deal again, Do you still want to cancel? </string>
    <string name="dontcancel">Don\'t cancel</string>
    <string name="cashback">Cashback</string>
    <string name="cancel_now">Cancel Order</string>
    <string name="view_all_order">View all order</string>
    <string name="cancellation_confirmed">Cancellation Confirmed</string>
    <string name="fullname">Full Name <font color='#FF4A4A'>*</font></string>
    <string name="house_flat">House/Flat number <font color='#FF4A4A'>*</font></string>
    <string name="landmark">Landmark <font color='#FF4A4A'>*</font></string>
    <string name="state">State <font color='#FF4A4A'>*</font></string>
    <string name="pincode">Pincode <font color='#FF4A4A'>*</font></string>
    <string name="phone_number1">Phone Number 1 <font color='#FF4A4A'>*</font> </string>
    <string name="phone_number2">Phone Number 2 </string>
    <string name="enter_house_number">Enter house number</string>
    <string name="enter_address">Enter Full Address</string>
    <string name="near_by">Near by</string>
    <string name="your_state">Your State</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="cancel_requested">You requested a cancellation order</string>
    <string name="payble_amount">Payable Amount</string>
    <string name="pay">Pay</string>
    <string name="mrp">MRP</string>
    <string name="email">Email</string>
    <string name="dob">Date Of Birth</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_dob">Enter your DOB</string>
    <string name="cancel">Cancel Order</string>
    <string name="need_help">Need Help?</string>
    <string name="name_txt">Name</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="buynow">Buy Now</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="months">Months</string>
    <string name="submit">Submit</string>
    <string name="yesterday">Yesterday</string>
    <string name="earlier">Earlier</string>
    <string name="addTocart">Add to cart</string>
    <string name="subs_7_percent_discount">Get Upto 7%\n Discount on\n every Order</string>
    <string name="subs_10_percent_discount">Get Upto 10%\n Discount on\n every Order</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="loginlongtext">"Please enter your registered mobile number to receive a OTP for Login your account"</string>
    <string name="Sendotp">Send OTP</string>
    <string name="doyouhaveac">Don\'t have an account?</string>
    <string name="signup2">Sign Up</string>
    <string name="help">Help</string>
    <string name="otplongtext">We have sent an OTP to \n your Mobile</string>
    <string name="otplongtext2">"Please check your mobile number 071*****88 \ncontinue to Login "</string>
    <string name="login2">Log In</string>
    <string name="didntrecive">Didn\'t Receive?</string>
    <string name="click">Click Here</string>
    <string name="no_transaction">You have no transactions yet</string>
    <string name="no_order">No any order yet, please make an order</string>
    <string name="Seeall">See all</string>
    <string name="transaction">Transactions</string>
    <string name="reviews">Reviews</string>
    <string name="Yourfeedback">Your Feedback</string>
    <string name="sendnow">Send Now</string>
    <string name="you_are_premium_member">You are premium member</string>
    <string name="enroll_to_premium_member">Become premium member</string>
    <string name="become_subscriber">Become subscriber</string>
    <string name="language">Language</string>
    <string name="Sendfeedback">Send Feedback</string>
    <string name="Contactus">Contact Us</string>
    <string name="sendquery">Send Query</string>
    <string name="about">About Us</string>
    <string name="termcondition"><![CDATA[Terms & Conditions]]></string>
    <string name="Privacy">Privacy Policies</string>
    <string name="logout">Logout</string>
    <string name="Today">Today</string>
    <string name="edit">Edit</string>
    <string name="addnewaddress">Add New Address</string>
    <string name="addshipingaddress">Add delivery address</string>
    <string name="fillther">Fill the given blank fields</string>
    <string name="saveas">Save As <font color='#FF4A4A'>*</font></string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="alreay">Already have an Account?</string>
    <string name="donthaveaccount">Don\'t have an Account?</string>
    <string name="Feedback">Feedback</string>
    <string name="feedbacklongtext"><![CDATA[we are happy to give a rating & send us \nyour feedback for app]]></string>
    <string name="yourquery">Your Query</string>
    <string name="contactus">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="editdetails">Edit Details</string>
    <string name="uploadprofile">Update Profile Details</string>
    <string name="saveaddress">Save Address</string>
    <string name="notification">Notification</string>
    <string name="mobile">Mobile Number</string>
    <string name="describe">Describe your experience with us....</string>
    <string name="describequery">Describe Your Query..........</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="introlongtext">Get cashback upto 9% on purchase of ₹5000 and above</string>
    <string name="ScanQRCode">Get cashback</string>
    <string name="shareapp">You will save more money on every purchase </string>
    <string name="coninue">Continue</string>
    <string name="ShareandEarn">Save more on order</string>
    <string name="name">Enter your name</string>
    <string name="enternumber">Enter your mobile number</string>
    <string name="support">Support 24X7</string>
    <string name="supportlongtext">Give your feedback about Sita app</string>
    <string name="lontextsupport2">Get quick support on queries related to your Rewards and Products</string>
    <string name="enable_location">Enable Location</string>
    <string name="you_ll_need_to_enable_your_location_n_in_order_to_use_hugme">You will need to enable your location\n in order to use Sita</string>
    <string name="allow_location">Allow Location</string>
    <string name="markas">Mark as defalut Address</string>
    <string name="Wallet">Wallet</string>
    <string name="use_wallete_amount"> Wallet amount use</string>
    <string name="wonmorepoints">Scan the code on the coupon inside your \nsita app earn the points</string>
    <string name="product_Catalogue">Product \nCatalogue</string>
    <string name="points">"Bonus Points "</string>
    <string name="Earned">Earned</string>
    <string name="redeem">Redeem</string>
    <string name="balance">Balance</string>
    <string name="myreward">My Reward</string>
    <string name="mydashboard">My Dashboard</string>
    <string name="refer">Refer a friend</string>
    <string name="mypoints">My Points</string>
    <string name="EarnedWon">Earned/Won</string>
    <string name="rewardpoint">Reward Points</string>
    <string name="scanfor">Scan For</string>
    <string name="refer2"><![CDATA[Refer & Earn]]></string>
    <string name="Earn1000Points">Earn Points</string>
    <string name="referearnlongtext">Invite your friends to Sita App and earn 100 points. When your friend sign up and place an order.</string>
    <string name="invite">Invite</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="messege">Message</string>
    <string name="more">More</string>
    <string name="our_videos">Our Videos</string>
    <string name="longtextpointwon">Congratulations!! You have Won </string>
    <string name="redeempoint">REDEEM POINTS FOR NEW ORDER</string>
    <string name="earnpoint">Earn 100 Points everytimes by referring \n your friends</string>
    <string name="gotoreward">Go to My Reward Points</string>
    <string name="customer_review">Customer Reviews</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="ima_customer">I am Customer</string>
    <string name="retailer">I am Shopkeeper</string>
    <string name="retail_login">Shopkeeper Login</string>
    <string name="customer_login">Customer Login</string>
    <string name="customer_signup">Customer Signup</string>
</resources>