<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/wallet_bg"
    tools:context=".Activity.LanguageActivity">

    <ImageView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/fifteensp"
        android:onClick="back"
        android:id="@+id/back_btn"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:tint="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolissemibold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:text="@string/select_language"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolissemibold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:text="@string/select_language_hindi"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/hindi_layout"
                android:layout_weight="1">

                <TextView
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:textColor="@color/dark_green"
                    android:background="@drawable/language_border"
                    android:paddingBottom="@dimen/_7sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:text="@string/hindi"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/english_layout"
                android:layout_weight="1">

                <TextView
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/dark_green"
                    android:background="@drawable/language_border"
                    android:paddingBottom="@dimen/_7sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:gravity="center"
                    android:text="@string/english"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/pangabi_layout"
                android:layout_weight="1">

                <TextView
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:textColor="@color/dark_green"
                    android:background="@drawable/language_border"
                    android:paddingBottom="@dimen/_7sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:text="@string/pangabi"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/urdu_layout"
                android:layout_weight="1">

                <TextView
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/dark_green"
                    android:background="@drawable/language_border"
                    android:paddingBottom="@dimen/_7sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:gravity="center"
                    android:text="@string/urdu"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/bengali_layout"
                android:layout_weight="1">

                <TextView
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:textColor="@color/dark_green"
                    android:background="@drawable/language_border"
                    android:paddingBottom="@dimen/_7sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:text="@string/bangali"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>